--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div id="app"></div>
+    <style>
+      .container {
+        padding: 0 1.5rem;
+      }
+    </style>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
