--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html lang="en" data-theme="emerald">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/book.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buku Ijo</title>
   </head>
   <body>
     <div id="app"></div>
-    <style>
-      .container {
-        padding: 0 1.5rem;
-      }
-    </style>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
