--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en" data-theme="emerald">
   <head>
     <meta charset="UTF-8" />
+    <!-- Primary Meta Tags -->
+    <title>Buku Ijo</title>
+    <meta name="title" content="Buku Ijo Bukan Kolor Ijo" />
+    <meta
+      name="description"
+      content="Ambil nomor surat masih pake buku yang bau gudang? Ganti sekarang!"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://buku-ijo.web.app/" />
+    <meta property="og:title" content="Buku Ijo Bukan Kolor Ijo" />
+    <meta
+      property="og:description"
+      content="Ambil nomor surat masih pake buku yang bau gudang? Ganti sekarang!"
+    />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://buku-ijo.web.app/" />
+    <meta property="twitter:title" content="Buku Ijo Bukan Kolor Ijo" />
+    <meta
+      property="twitter:description"
+      content="Ambil nomor surat masih pake buku yang bau gudang? Ganti sekarang!"
+    />
+    <meta property="twitter:image" content="" />
+
     <link rel="icon" href="/book.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buku Ijo</title>
   </head>
   <body>
     <div id="app"></div>
