working mode_surat

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="icon" href="/book.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body>
+  <body class="bg-slate-100">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
